@@ -4,6 +4,12 @@
 This document provides a curated view of the changes to Asciidoctor Tabs per release.
 For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.
 
+== Unreleased
+
+=== Changed
+
+* Repurpose example block as open block if filetype is not html
+
 == 1.0.0-beta.5 (2023-05-28) - @mojavelinux
 
 === Changed
